# libprotobuf-mutator-plusplus

./: .gitignore  .gitmodules  README.md  meson.build  mutator.hh  statistics.cc  statistics.hh  trimming.cc  trimming.hh  utils.cc  utils.hh
benchmark/: .gitignore  build.sh  meson.build  meson.options
benchmark/convert/: convert.cc  convert.hh
benchmark/corpus/: gencorpus.sh
benchmark/corpus/vuln1/: t1.pb.txt  t2.pb.txt  t3.pb.txt
benchmark/corpus/vuln1/text/: t1.json  t2.json  t3.json
benchmark/mutator/: meson.build  vuln_mutator.cc
benchmark/proto/: meson.build  vuln.pb.cc  vuln.pb.h  vuln.proto
benchmark/src/: vuln.hh  vuln1.cc
benchmark/src/harness/: afl.cc  lpm.cc
include/: libprotobuf-mutator
tests/: meson.build  test_trimming.cc
tests/fixtures/: testmsg1.pb.txt  testmsg2.pb.txt
tests/proto/: meson.build  test.pb.cc  test.pb.h  test.proto
